--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
+    "express": "^5.1.0",
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "name": "nodejs_helloworld",
+  "version": "1.0.0",
+  "description": "This is exapmle of node js",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Madhvendra Singh",
+  "license": "ISC"
 }
